Switched from sun.misc.BASE64Decoder to apache commons Base64
git-svn-id: https://www.europeanalabs.eu/svn/europeana/trunk@610 3c7f12e8-d31e-4037-9ce9-7a8ea9e2c7c8